--- a/src/tela/TelaBuscaOS.form
+++ b/src/tela/TelaBuscaOS.form
@@ -179,7 +179,7 @@
                                               </Group>
                                               <Group type="102" alignment="0" attributes="0">
                                                   <Component id="jLabelNome_NomeFantasia" min="-2" pref="39" max="-2" attributes="0"/>
-                                                  <EmptySpace pref="25" max="32767" attributes="0"/>
+                                                  <EmptySpace pref="19" max="32767" attributes="0"/>
                                                   <Component id="tField_nome_razaoSocial" min="-2" pref="470" max="-2" attributes="0"/>
                                                   <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
                                               </Group>
@@ -253,10 +253,11 @@
                                               </Group>
                                               <Group type="102" alignment="0" attributes="0">
                                                   <EmptySpace max="-2" attributes="0"/>
-                                                  <Group type="103" groupAlignment="0" attributes="0">
-                                                      <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                                                      <Component id="jScrollPane1" min="-2" pref="511" max="-2" attributes="0"/>
-                                                  </Group>
+                                                  <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                                              </Group>
+                                              <Group type="102" attributes="0">
+                                                  <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                                                  <Component id="jTextFieldDefeitoRelatado" min="-2" pref="622" max="-2" attributes="0"/>
                                               </Group>
                                           </Group>
                                       </Group>
@@ -364,7 +365,6 @@
                                       </Group>
                                       <Component id="jButtonConfirmar" alignment="0" min="-2" pref="116" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace min="48" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -551,8 +551,8 @@
                                   <Component id="jSeparator4" min="-2" pref="10" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jScrollPane1" min="-2" pref="109" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
+                                  <Component id="jTextFieldDefeitoRelatado" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
                                   <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
@@ -915,22 +915,6 @@
             <Property name="text" type="java.lang.String" value="DEFEITO RELATADO"/>
           </Properties>
         </Component>
-        <Container class="javax.swing.JScrollPane" name="jScrollPane1">
-          <AuxValues>
-            <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
-          </AuxValues>
-
-          <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
-          <SubComponents>
-            <Component class="javax.swing.JTextArea" name="jTextAreaDefeitoRelatado">
-              <Properties>
-                <Property name="columns" type="int" value="20"/>
-                <Property name="rows" type="int" value="5"/>
-                <Property name="text" type="java.lang.String" value="&#xa;&#x9;"/>
-              </Properties>
-            </Component>
-          </SubComponents>
-        </Container>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
             <Property name="text" type="java.lang.String" value="DATA ABERTURA"/>
@@ -1244,6 +1228,8 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="CPF: "/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JTextField" name="jTextFieldDefeitoRelatado">
         </Component>
       </SubComponents>
     </Container>
